<resources>
    <string name="app_name">PlacesResearcher</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location updated</string>
    <string name="search_hint">what are you looking for…</string>
    <string name="search_header">Unlock Drawer</string>
    <string name="edit_header">Lock Drawer</string>
    <string name="base_header">Close Drawer</string>
    <string name="google_app_id">AIzaSyAVpGQUCLxk7Jx0cpOG1skDz-khBSNBlS8</string>

    <string name="settings_unit_km">Kilometers</string>
    <string name="settings_unit_miles">Miles</string>
    <string name="GPS_check_response">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="switch_text">local </string>
    <string name="local_switch">local_switch</string>
    <string name="unit_checkbox">unit_checkbox</string>
    <string name="search_distance">search_distance</string>

</resources>
